tests/ui/supertrait-shadowing/assoc-type-fail.stderr
error[E0271]: type mismatch resolving `<u32 as B>::Assoc == i8`
  --> $DIR/assoc-type-fail.rs:27:20
   |
LL |     b_assoc_is_a::<u32>();
   |                    ^^^ type mismatch resolving `<u32 as B>::Assoc == i8`
   |
note: expected this to be `i8`
  --> $DIR/assoc-type-fail.rs:17:18
   |
LL |     type Assoc = i16;
   |                  ^^^
note: required by a bound in `b_assoc_is_a`
  --> $DIR/assoc-type-fail.rs:41:22
   |
LL | fn b_assoc_is_a<U: B<Assoc = i8>>() {
   |                      ^^^^^^^^^^ required by this bound in `b_assoc_is_a`

error[E0271]: type mismatch resolving `<u32 as B>::Assoc == i8`
  --> $DIR/assoc-type-fail.rs:29:20
   |
LL |     c_assoc_is_a::<u32>();
   |                    ^^^ type mismatch resolving `<u32 as B>::Assoc == i8`
   |
note: expected this to be `i8`
  --> $DIR/assoc-type-fail.rs:17:18
   |
LL |     type Assoc = i16;
   |                  ^^^
note: required by a bound in `c_assoc_is_a`
  --> $DIR/assoc-type-fail.rs:45:22
   |
LL | fn c_assoc_is_a<U: C<Assoc = i8>>() {
   |                      ^^^^^^^^^^ required by this bound in `c_assoc_is_a`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
